--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">LaCasaNostra</string>
     <string name="navigation_drawer_open" />
     <string name="navigation_drawer_close" />
+    <string name="bienvenido_a_la_casa_nostra">Bienvenido A La Casa Nostra</string>
 </resources>
