--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,9 @@
     <string name="navigation_drawer_open" />
     <string name="navigation_drawer_close" />
     <string name="bienvenido_a_la_casa_nostra">Bienvenido A La Casa Nostra</string>
+    <string name="carta">Carta</string>
+    <string name="logo_de_la_aplicai_n">Logo de la aplicación</string>
+    <string name="pulse_el_bot_n_para_ir_directo_a_la_carta">Pulse el botón para ir directo a la carta</string>
+    <string name="home">Home</string>
+    <string name="acceder">Acceder</string>
 </resources>
