--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -7,4 +7,5 @@
     <string name="pulse_el_bot_n_para_ir_directo_a_la_carta">Press the button to go straight to the menu</string>
     <string name="home">Home</string>
     <string name="acceder">Login</string>
+    <string name="cambio_de_idioma">Change of language</string>
 </resources>
