--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="pulse_el_bot_n_para_ir_directo_a_la_carta">Pulse el botón para ir directo a la carta</string>
     <string name="home">Home</string>
     <string name="acceder">Acceder</string>
+    <string name="cambio_de_idioma">Cambio de idioma</string>
 </resources>
