--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -8,4 +8,5 @@
     <string name="home">Home</string>
     <string name="acceder">Login</string>
     <string name="cambio_de_idioma">Change of language</string>
+    <string name="configuracion">Settings</string>
 </resources>
