--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="home">Home</string>
     <string name="acceder">Acceder</string>
     <string name="cambio_de_idioma">Cambio de idioma</string>
+    <string name="configuracion">Configuracion</string>
 </resources>
