--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -9,4 +9,8 @@
     <string name="acceder">Login</string>
     <string name="cambio_de_idioma">Change of language</string>
     <string name="configuracion">Settings</string>
+    <string name="pagina_web">Web page</string>
+    <string name="nombre_de_usuario">Username</string>
+    <string name="contrase_a">Password</string>
+    <string name="iniciar_sesi_n">log in</string>
 </resources>
