--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,8 @@
     <string name="acceder">Acceder</string>
     <string name="cambio_de_idioma">Cambio de idioma</string>
     <string name="configuracion">Configuracion</string>
+    <string name="pagina_web">Pagina web</string>
+    <string name="nombre_de_usuario">Nombre de usuario</string>
+    <string name="contrase_a">Contraseña</string>
+    <string name="iniciar_sesi_n">Iniciar Sesión</string>
 </resources>
