--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -14,4 +14,5 @@
     <string name="contrase_a">Password</string>
     <string name="iniciar_sesi_n">log in</string>
     <string name="no_tienes_cuenta_reg_strate_aqu">You do not have an account? Sign up here!</string>
+    <string name="correo_electronico">Email</string>
 </resources>
