terminar layout registrar!!!

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,7 @@
     <string name="iniciar_sesi_n">Iniciar Sesión</string>
     <string name="no_tienes_cuenta_reg_strate_aqu">No tienes cuenta? Regístrate aquí!</string>
     <string name="correo_electronico">Correo Electronico</string>
+    <string name="Registrar">Registrar</string>
+    <string name="nombre">Nombre</string>
+
 </resources>
