--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -12,7 +12,7 @@
     <string name="pagina_web">Web page</string>
     <string name="nombre_de_usuario">Username</string>
     <string name="contrase_a">Password</string>
-    <string name="iniciar_sesi_n">log in</string>
+    <string name="iniciar_sesi_n">Log in</string>
     <string name="no_tienes_cuenta_reg_strate_aqu">You do not have an account? Sign up here!</string>
     <string name="correo_electronico">Email</string>
 </resources>
