--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,5 +18,6 @@
     <string name="correo_electronico">Correo Electronico</string>
     <string name="Registrar">Registrar</string>
     <string name="nombre">Nombre</string>
+    <string name="apellidos">Apellidos</string>
 
 </resources>
