puedes hacer lo de reserva!!!

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,5 +19,6 @@
     <string name="Registrar">Registrar</string>
     <string name="nombre">Nombre</string>
     <string name="apellidos">Apellidos</string>
+    <string name="reservas">Reservas</string>
 
 </resources>
