--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -25,4 +25,5 @@
     <string name="hora">Hour</string>
     <string name="guardar">Save</string>
     <string name="lista_reservas">Reservation List</string>
+    <string name="login">You have logged in!!</string>
 </resources>
