--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,6 +27,7 @@
     <string name="guardar">Guardar</string>
     <string name="lista_reservas">Lista Reservas</string>
     <string name="login">Has iniciado sesión!!</string>
+    <string name="comensales">Comensales</string>
 
 
 </resources>
