--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -26,4 +26,5 @@
     <string name="guardar">Save</string>
     <string name="lista_reservas">Reservation List</string>
     <string name="login">You have logged in!!</string>
+    <string name="comensales">Diners</string>
 </resources>
