--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,7 @@
     <string name="lista_reservas">Lista Reservas</string>
     <string name="login">Has iniciado sesión!!</string>
     <string name="comensales">Comensales</string>
+    <string name="promociones">Promociones</string>
 
 
 </resources>
