--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,7 @@
     <string name="reserva">Reserva</string>
     <string name="escribe_la_cantidad_de_comersales">Seleccione la cantidad de comensales</string>
     <string name="inicio_session">No puedes porque tienes que iniciar sesion</string>
+    <string name="reservaFinal">Has realizado una reserva en La Casa Nostra a nombre de: </string>
     <string name="fecha">Fecha</string>
     <string name="hora">Hora</string>
     <string name="guardar">Guardar</string>
