--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -29,4 +29,5 @@
     <string name="comensales">Diners</string>
     <string name="promociones">Promotions</string>
     <string name="reservaFinal">You have made a reservation at La Casa Nostra under the name of:</string>
+    <string name="seleccionar">Selection</string>
 </resources>
