--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,7 @@
     <string name="login">Has iniciado sesión!!</string>
     <string name="comensales">Comensales</string>
     <string name="promociones">Promociones</string>
+    <string name="seleccionar">Selección</string>
 
 
 </resources>
