--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,6 +31,10 @@
     <string name="comensales">Comensales</string>
     <string name="promociones">Promociones</string>
     <string name="seleccionar">Selección</string>
+    <string name="admin">Admin</string>
+    <string name="perfil">Perfil</string>
+    <string name="configuraci_n">Configuración</string>
+    <string name="cerrar_sesion">Cerrar Sesion</string>
 
 
 </resources>
