--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,7 +21,7 @@
     <string name="apellidos">Apellidos</string>
     <string name="reserva">Reserva</string>
     <string name="escribe_la_cantidad_de_comersales">Seleccione la cantidad de comensales</string>
-    <string name="inicio_session">No puedes porque tienes que iniciar sesion</string>
+    <string name="inicio_session">Debes de iniciar sesion</string>
     <string name="reservaFinal">Has realizado una reserva en La Casa Nostra</string>
     <string name="fecha">Fecha</string>
     <string name="hora">Hora</string>
@@ -35,6 +35,7 @@
     <string name="perfil">Perfil</string>
     <string name="configuraci_n">Configuración</string>
     <string name="cerrar_sesion">Cerrar Sesion</string>
+    <string name="avisoInicio">Ya estas con una sesion activa</string>
 
 
 </resources>
