cambios tontos falta por hacer cosas!!!

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -19,12 +19,12 @@
     <string name="nombre">Name</string>
     <string name="apellidos">Surname</string>
     <string name="reserva">Book</string>
-    <string name="escribe_la_cantidad_de_comersales">Select the number of diners</string>
+    <string name="escribe_la_cantidad_de_comersales">Enter the number of diners</string>
     <string name="inicio_session">You must log in</string>
     <string name="fecha">Date</string>
     <string name="hora">Hour</string>
     <string name="guardar">Save</string>
-    <string name="lista_reservas">Reservation List</string>
+    <string name="lista_reservas">Active Reserves</string>
     <string name="login">You have logged in!!</string>
     <string name="comensales">Diners</string>
     <string name="promociones">Promotions</string>
@@ -43,4 +43,5 @@
     <string name="noadmin">You must be admin</string>
     <string name="nombre_apellido">Write first and last name</string>
     <string name="editar_perefil">You can now edit your profile</string>
+    <string name="reservas_antiguas">Old Reservations</string>
 </resources>
