--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,6 +47,9 @@
     <string name="nombre_apellido">Escribe nombre y apellido</string>
     <string name="editar_perefil">Ya puedes editar tu perfil</string>
     <string name="reservas_antiguas">Lista Reservas</string>
+    <string name="ingredientes">Ingredientes</string>
+    <string name="calorias">Calorias</string>
+    <string name="precio">Precio</string>
 
 
 </resources>
