--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,6 +50,8 @@
     <string name="ingredientes">Ingredientes</string>
     <string name="calorias">Calorias</string>
     <string name="precio">Precio</string>
+    <string name="a_adir_plato">Añadir Plato</string>
+    <string name="descripcion">Descripcion</string>
 
 
 </resources>
