--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -51,4 +51,5 @@
     <string name="precio">Price</string>
     <string name="a_adir_plato">Add Plate</string>
     <string name="descripcion">Description</string>
+    <string name="modificar_plato">Modify Silver</string>
 </resources>
