--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,6 +52,7 @@
     <string name="precio">Precio</string>
     <string name="a_adir_plato">Añadir Plato</string>
     <string name="descripcion">Descripcion</string>
+    <string name="modificar_plato">Modificar Plato</string>
 
 
 </resources>
