--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,6 +53,17 @@
     <string name="a_adir_plato">Añadir Plato</string>
     <string name="descripcion">Descripcion</string>
     <string name="modificar_plato">Modificar Plato</string>
+    <string name="elige_el_plato">Elige el plato</string>
+    <string name="selecciona_imagen">Selecciona Imagen</string>
+    <string name="indica_el_nuevo_nombre">Indica el nuevo nombre</string>
+    <string name="indica_la_nueva_descripcion">Indica la nueva descripcion</string>
+    <string name="modificar">MODIFICAR</string>
+    <string name="productos">Productos</string>
+    <string name="modificar_producto">Modificar Producto</string>
+    <string name="platos">Platos</string>
+    <string name="a_adir_producto">Añadir Producto</string>
+    <string name="lista_reservas_lista">Lista Reservas</string>
+    <string name="necesario_escribir">Se requiere un correo electronico</string>
 
 
 </resources>
