--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,6 +68,7 @@
     <string name="introduce_el_precio">Introduce el Precio</string>
     <string name="introduce_los_ingredientes">Introduce los ingredientes</string>
     <string name="indique_el_plato">Indique el plato</string>
+    <string name="introduce_las_calorias">Introduce las calorias</string>
 
 
 </resources>
