--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,6 +69,7 @@
     <string name="introduce_los_ingredientes">Introduce los ingredientes</string>
     <string name="indique_el_plato">Indique el plato</string>
     <string name="introduce_las_calorias">Introduce las calorias</string>
+    <string name="seleccione_un_producto">Seleccione un producto</string>
 
 
 </resources>
