cambio y eliminar los dos...

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,6 +71,7 @@
     <string name="introduce_las_calorias">Introduce las calorias</string>
     <string name="seleccione_un_producto">Seleccione un producto</string>
     <string name="eliminar_producto">Eliminar Producto</string>
+    <string name="eliminar_plato">Eliminar Plato</string>
 
 
 </resources>
