todo bien diria!!!

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -49,27 +49,27 @@
     <string name="ingredientes">Ingredients</string>
     <string name="calorias">Calories</string>
     <string name="precio">Price</string>
-    <string name="a_adir_plato">Add Plate</string>
+    <string name="a_adir_plato">Add Category</string>
     <string name="descripcion">Description</string>
-    <string name="modificar_plato">Modify Silver</string>
-    <string name="elige_el_plato">Choose the dish</string>
+    <string name="modificar_plato">Modify Category</string>
+    <string name="elige_el_plato">Choose the Category</string>
     <string name="selecciona_imagen">Select Image</string>
     <string name="indica_el_nuevo_nombre">Enter the new name</string>
     <string name="indica_la_nueva_descripcion">Indicates the new description</string>
     <string name="modificar">MODIFY</string>
     <string name="productos">Products</string>
     <string name="modificar_producto">Modify Product</string>
-    <string name="platos">Dishes</string>
+    <string name="platos">Category</string>
     <string name="a_adir_producto">Add Product</string>
     <string name="lista_reservas_lista">Reservation List</string>
     <string name="necesario_escribir">An email is required</string>
     <string name="introduce_nombre">Enter the name</string>
     <string name="introduce_el_precio">Enter the price</string>
     <string name="introduce_los_ingredientes">Enter the ingredients</string>
-    <string name="indique_el_plato">Indicate the dish</string>
+    <string name="indique_el_plato">Indicate the category</string>
     <string name="introduce_las_calorias">Enter the calories</string>
     <string name="seleccione_un_producto">Select a product</string>
     <string name="eliminar_producto">Delete Product</string>
-    <string name="eliminar_plato">Delete dish</string>
+    <string name="eliminar_plato">Delete Category</string>
     <string name="numero_de_comensales">Number of diners</string>
 </resources>
