--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -73,6 +73,33 @@
     <string name="eliminar_producto">Eliminar Producto</string>
     <string name="eliminar_plato">Eliminar Categoria</string>
     <string name="numero_de_comensales">Numero de comensales</string>
+    <string name="terminos_y_condiciones">Terminos y Condiciones</string>
+    <string name="texto">Términos y Condiciones de "La Casa Nostra"
+
+Bienvenido a "La Casa Nostra", una aplicación móvil para Android que te permite acceder a la carta de nuestro restaurante, realizar reservas, obtener promociones y más. Al utilizar nuestra aplicación, aceptas los siguientes términos y condiciones:
+
+Propiedad de la aplicación
+"La Casa Nostra" es propiedad de Cristobal Bernal, y se proporciona como una herramienta para facilitar la interacción con nuestro restaurante. Nos reservamos el derecho de actualizar o cambiar la aplicación en cualquier momento.
+
+Uso de la aplicación
+El uso de "La Casa Nostra" es gratuito, pero al usar la aplicación aceptas que no la utilizarás para ningún propósito ilegal o fraudulento. También aceptas que no intentarás acceder a áreas protegidas de la aplicación ni a información confidencial sin nuestra autorización.
+
+Registro de cuenta
+Para acceder a ciertas funciones de "La Casa Nostra", puedes necesitar registrarte para crear una cuenta de usuario. Al hacerlo, aceptas proporcionar información precisa y completa. Eres responsable de proteger la confidencialidad de tus credenciales de inicio de sesión y de notificarnos de inmediato si sospechas que alguien ha utilizado tu cuenta sin autorización.
+
+Privacidad
+Respetamos tu privacidad y estamos comprometidos con la protección de tus datos personales. Por favor, consulta nuestra Política de Privacidad para obtener más información sobre cómo recopilamos, utilizamos y protegemos tus datos.
+
+Promociones
+De vez en cuando, podemos ofrecer promociones exclusivas a través de "La Casa Nostra". Las promociones estarán sujetas a términos y condiciones adicionales que se proporcionarán en el momento de la oferta.
+
+Responsabilidad
+"La Casa Nostra" se proporciona "tal cual", sin garantía de ningún tipo. No nos hacemos responsables de ninguna pérdida o daño directo o indirecto que pueda resultar del uso de la aplicación.
+
+Cambios en los términos y condiciones
+Nos reservamos el derecho de actualizar o cambiar estos Términos y Condiciones en cualquier momento. Cualquier cambio se publicará en esta página. El uso continuado de "La Casa Nostra" después de cualquier cambio constituye tu aceptación de los nuevos términos y condiciones.
+
+Al utilizar "La Casa Nostra", aceptas estos Términos y Condiciones. Si tienes alguna pregunta o inquietud, no dudes en ponerte en contacto con nosotros. Gracias por usar nuestra aplicación.</string>
 
 
 </resources>
