--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -100,4 +100,6 @@
 
         By using "La Casa Nostra," you agree to these Terms and Conditions. If you have any questions or concerns, please do not hesitate to contact us. Thank you for using our application.
     ]]></string>
+    <string name="maximo">Maximum 15 people, CALL</string>
+    <string name="terminos_y_condiciones">Terms and Conditions</string>
 </resources>
