--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">LaCasaNostra</string>
-    <string name="bienvenido_a_la_casa_nostra">Welcome A La Casa Nostra</string>
+    <string name="bienvenido_a_la_casa_nostra">Welcome To The Casa Nostra</string>
     <string name="carta">Menu</string>
     <string name="logo_de_la_aplicai_n">Application logo</string>
     <string name="pulse_el_bot_n_para_ir_directo_a_la_carta">Press the button to go straight to the menu</string>
@@ -102,4 +102,5 @@
     ]]></string>
     <string name="maximo">Maximum 15 people, CALL</string>
     <string name="terminos_y_condiciones">Terms and Conditions</string>
+    <string name="bienvenido">Welcome</string>
 </resources>
