--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -103,4 +103,16 @@
     <string name="maximo">Maximum 15 people, CALL</string>
     <string name="terminos_y_condiciones">Terms and Conditions</string>
     <string name="bienvenido">Welcome</string>
+    <string name="eliminar_tipo">Do you want to remove the type?</string>
+    <string name="eliminar_producto_delete">Do you want to delete the product?</string>
+    <string name="aceptar">Accept</string>
+    <string name="cancelar">Cancel</string>
+    <string name="hascancelar">You have canceled</string>
+    <string name="eliminado_prducto">Product removed</string>
+    <string name="eliminado_tipo">Type removed</string>
+    <string name="anadido">Added successfully</string>
+    <string name="categoria">Modified category</string>
+    <string name="producto">Modified product</string>
+    <string name="registrar">You have successfully registered</string>
+    <string name="no_has_iniciado">You have not logged in</string>
 </resources>
